--- a/app/src/main/res/drawable/white_fill_board.xml
+++ b/app/src/main/res/drawable/white_fill_board.xml
@@ -2,12 +2,14 @@
 <layer-list  xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:left="-3dp"
-        android:right="-3dp"
-        android:top="-3dp">
-        <shape>
-            <stroke
+        android:right="-3dp">
+        <shape
+            android:shape="rectangle">
+            <corners
+                android:radius="20dp"></corners>
+            <solid
                 android:width="1dp"
-                android:color="#C5C5C5" />
+                android:color="#FFFFFF" />
         </shape>
     </item>
 </layer-list >
