--- a/app/src/main/res/layout/activity_weekly_report_detail.xml
+++ b/app/src/main/res/layout/activity_weekly_report_detail.xml
@@ -420,6 +420,7 @@
             android:textSize="18sp"
             android:gravity="center"
             android:text="已通过"
+            android:visibility="gone"
             android:layout_alignParentBottom="true"
             android:textColor="@color/colorAccent"
             android:layout_height="50dp" />
