--- a/app/src/main/res/layout/fragment_member.xml
+++ b/app/src/main/res/layout/fragment_member.xml
@@ -5,8 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".activity.fragment.MemberFragment">
+        android:orientation="vertical">
 
         <!-- TODO: Update blank fragment layout -->
         <include
