--- a/app/src/main/res/layout/fragment_member_info.xml
+++ b/app/src/main/res/layout/fragment_member_info.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.fragment.NextWeekReprotManagerFragment">
+        tools:context=".activity.fragment.MemberInfoFragment">
 
-        <!-- TODO: Update blank fragment layout -->
         <com.jwenfeng.library.pulltorefresh.PullToRefreshLayout
-            android:id="@+id/next_Report_plt"
+            android:id="@+id/member_plt"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/next_Report_recycler"
+                android:id="@+id/member_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"/>
+                android:layout_height="match_parent"/>
         </com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>
-    </RelativeLayout>
+
+
+
+    </FrameLayout>
 </layout>
