--- a/app/src/main/res/layout/item_tag_description.xml
+++ b/app/src/main/res/layout/item_tag_description.xml
@@ -2,32 +2,45 @@
 <layout>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/base_line_wfe"
+    android:background="#FF644A"
+
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
-    <ImageView
-        android:id="@+id/item_tag_img"
-        android:src="@drawable/xiangmu"
-        android:layout_marginLeft="20dp"
+    <!--<ImageView-->
+        <!--android:id="@+id/item_tag_img"-->
+        <!--android:src="@drawable/xiangmu"-->
+        <!--android:layout_marginLeft="20dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
+    <TextView
+        android:textSize="18sp"
+        android:text="工作类型"
+        android:layout_alignParentLeft="true"
+        android:textColor="#FFFFFF"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/item_tag_name_txt"
         android:textSize="18sp"
-        android:layout_toRightOf="@+id/item_tag_img"
         android:text="项目工作"
-        android:textColor="@color/colorAccent"
+        android:textColor="#FFFFFF"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+
 </RelativeLayout>
 </layout>
